--- a/style.css
+++ b/style.css
@@ -203,8 +203,7 @@ main {
 /* --------------- banner-section --------------------- */
 
 .banner-section {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.5)), url('../Images/Group\ 13\ \(1\)\ \(1\).png');
+    background-image: url('../Images/Group\ 13\ \(1\)\ \(1\).png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 106px 217px;
